fix issue with horizontal scrolling on mobile

--- a/client/src/styles/TeamCard.css
+++ b/client/src/styles/TeamCard.css
@@ -18,6 +18,6 @@
 
 @media (width <= 700px) {
   .team-card {
-    width: 118px;
+    width: 100px;
   }
 }
